2004-10-10  Bruno Haible  <bruno@clisp.org>

	* clos-method1.lisp (standard-method): Remove initfunction slot.
	(initialize-instance-<standard-method>): Update.
	* clos-genfun4.lisp (initialize-extended-method-check): Update.
	* disassem.lisp (disassemble@standard-method): Update.

	Now that methods are never copied, move the initfunction invocation
	to the initializer.
	* clos-method1.lisp (initialize-instance-<standard-method>): Invoke
	the initfunction here.
	* clos-genfun2.lisp (std-add-method): ... not here.
	(std-remove-method): Use normal identity for comparing methods.

2004-10-15  Sam Steingold  <sds@gnu.org>

	LOAD can now restart when it encounters errors
	* init.lisp (eval-loaded-form-low): new function
	(eval-loaded-form): dummy definition
	(load): use EVAL-LOADED-FORM
	* condition.lisp (eval-loaded-form): redefine with two restarts:
	SKIP and STOP

2004-10-10  Bruno Haible  <bruno@clisp.org>

	New generic function (setf method-generic-function).
	* clos-method1.lisp ((setf method-generic-function)): New preliminary
	function.
	* clos-genfun2.lisp (std-add-method, std-remove-method,
	reinitialize-instance-<generic-function>): Use it instead of
	(setf std-method-generic-function).
	* clos-method3.lisp ((setf method-generic-function)): New generic
	function.

2004-10-10  Bruno Haible  <bruno@clisp.org>

	Move the from-defgeneric slot from <standard-method> up to <method>.
	* clos-method1.lisp (method): Add from-defgeneric slot.
	(initialize-instance-<method>): New function.
	(standard-method): Remove from-defgeneric slot.
	(initialize-instance-<standard-method>): Refer to
	initialize-instance-<method>. Don't initialize from-defgeneric.
	* clos-genfun2.lisp (std-remove-method,
	reinitialize-instance-<generic-function>): Update.
	* clos-method3.lisp (initialize-instance@method): New method.

2004-10-10  Bruno Haible  <bruno@clisp.org>

	Prepare for non-standard methods.
	* clos-methcomb2.lisp (method-list-to-continuation): Use